--- a/apresentacao/css/relatorio.css
+++ b/apresentacao/css/relatorio.css
@@ -251,6 +251,15 @@ a:focus {
 }
 
 /*
+  Speaker notes allow you to write comments within the steps, that will not 
+  be displayed as part of the presentation. However, they will be picked up
+  and displayed by impressConsole.js when you press P.
+*/
+.notes {
+    display: none;
+}
+
+/*
     And now we start to style each step separately.
 
     I agree that this may be not the most efficient, object-oriented and
@@ -260,8 +269,25 @@ a:focus {
     First is the title step with a big <h1> (no room for padding) and some
     3D positioning along Z axis.
 */
+h1 {
+    font-size: 160px;
+    line-height: 1;
+}
+h2 {
+    font-size: 120px;
+}
+h3 {
+    font-size: 80px;
+}
+h4 {
+    font-size: 30px;
+    font-weight: bold;
+}
 #home {
     text-align: center;
+}
+#home p {
+    margin-top: 30px;
 }
 #home footer {
     font-size: 32px;
@@ -283,7 +309,7 @@ a:focus {
 }
 
 #title h1 {
-    font-size: 180px;
+    /* font-size: 180px; */
 
     -webkit-transform: translateZ(50px);
     -moz-transform:    translateZ(50px);
@@ -308,6 +334,26 @@ a:focus {
 }
 #empresa ul {
     margin-top: 20px;
+}
+
+#objetivoGeral {
+    font-size: 64px;
+}
+
+#objetivoGeral span{
+    font-size: 90px;
+}
+
+#objetivosEspecificos {
+    font-size: 64px;
+    width: 1000px;
+}
+#objetivosEspecificos span{
+    font-size: 90px;
+}
+
+#objetivosEspecificos ul{
+    list-style-type: disc;
 }
 
 /*
@@ -335,13 +381,7 @@ a:focus {
     line-height: 150px;
 }
 
-/*
-    'Tiny ideas' just need some tiny styling.
-*/
-#tiny {
-    width: 500px;
-    text-align: center;
-}
+
 
 /*
     This step has some animated text ...
