--- a/apresentacao/css/relatorio.css
+++ b/apresentacao/css/relatorio.css
@@ -527,6 +527,11 @@ h4 {
     background-image: url("../../dados/figuras/veiculos-atividade2.png");
     background-repeat: no-repeat;
 }
+#atividades {
+    width: 1300px;
+    height: 1600px;
+    background-image: url("../../dados/figuras/veiculos-tarefas-jose-ricardo.png");
+}
 #planejamento {
     width: 1300px;
     height: 1600px;
