--- a/apresentacao/css/relatorio.css
+++ b/apresentacao/css/relatorio.css
@@ -537,6 +537,12 @@ h4 {
     height: 1600px;
     background-image: url("../../dados/figuras/veiculos-planejamento.png");
     
+}
+#ireports {
+    width: 1300px;
+    height: 740px;
+    background-image: url("../../dados/figuras/veiculos-ireport.png")
+}
 
 #source q {
     font-size: 60px;
